truncated full view calendar fixed.

--- a/styles/browse.css
+++ b/styles/browse.css
@@ -4,7 +4,6 @@
 #browsing-interface {
     position:   relative;
     width:      100%;
-    overflow:	hidden;
 }
 
 #add-more-select {
